# space-symphony

./: Cargo.toml
space-symphony/: Cargo.toml
space-symphony/src/: gui.rs  main.rs
spotify-web-api/: Cargo.toml
spotify-web-api/src/: lib.rs
