[package]
name = "space-symphony"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
axum = "0.7.2"
confy = "0.5.1"
iced = { version = "0.10.0", features = [
  "advanced",
  "image",
  "tokio",
  "canvas",
] }
iced_aw = { version = "0.7.0", default-features = false, features = [
  "badge",
  "card",
  "menu",
  "modal",
] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
spotify-web-api = { path = "../spotify-web-api" }
tokio = { version = "1.35.0", features = ["full"] }
rspotify = { version = "0.12.0" }
webbrowser = "0.8.12"
time = "0.3.31"
chrono = "0.4.31"
